# libemf

./: Makefile.am  NEWS  configure.ac
debian/: changelog  control  copyright  libemf-doc.doc-base.html  libemf-doc.doc-base.manual  libemf-doc.docs  libemf-doc.links  libemf-doc.manpages  printemf.install  rules  watch
debian/patches/: 0001-autotools-updates.patch  0002-autoconf-AS_HELP_STRING.patch  0003-remove-doc-doxygen-subdir.patch  0004-add-build-time-doxygen-support-via-autotools.patch  0005-typo-in-doc-string.patch  series
debian/upstream/: metadata
include/libEMF/: emf.h
include/libEMF/wine/: winnt.h
libemf/: libemf.cpp  libemf.h
src/: Makefile.am  printemf.c
tests/: Makefile.am  check1.c  check2.c  check3.c  check4.c  docheck1.sh  docheck2.sh  docheck3.sh  example1.c  example2.c
